add save trip event api
