# api/rest/handler.go
@@ -5,6 +5,7 @@ import (
 	"fmt"
 	"net/http"
 	"strconv"
+	"time"
 
 	"github.com/ganeshdipdumbare/scootin-aboot-journey/app"
 	docs "github.com/ganeshdipdumbare/scootin-aboot-journey/docs"
@@ -44,6 +45,28 @@ type beginTripRequest struct {
 type beginTripResponse struct {
 	UserID    string `json:"user_id"`
 	ScooterID string `json:"scooter_id"`
+}
+
+type endTripRequest struct {
+	UserID    string `json:"user_id" validate:"required,uuid4"`
+	ScooterID string `json:"scooter_id" validate:"required,uuid4"`
+}
+
+type endTripResponse struct {
+	UserID    string `json:"user_id"`
+	ScooterID string `json:"scooter_id"`
+}
+
+type saveScooterTripEventRequest struct {
+	UserID    string      `json:"user_id" validate:"required,uuid4"`
+	ScooterID string      `json:"scooter_id" validate:"required,uuid4"`
+	Location  geoLocation `json:"location" validate:"required"`
+	CreatedAt time.Time   `json:"created_at" validate:"required"`
+	Type      string      `json:"type" validate:"required"`
+}
+
+type saveScooterTripEventResponse struct {
+	Success bool `json:"success"`
 }
 
 type errorRespose struct {
@@ -91,13 +114,19 @@ func (api *apiDetails) setupRouter() *gin.Engine {
 	authUserGroup.Use(api.authenticate)
 	authUserGroup.GET("/available-scooters", api.getAvailableScooters)
 	authUserGroup.PUT("/begin-trip", api.beginTrip)
+	authUserGroup.PUT("/end-trip", api.endTrip)
+
+	authScooterGroup := v1group.Group("/auth/scooter")
+	authScooterGroup.Use(api.authenticate)
+	authScooterGroup.POST("/trip-event", api.saveScooterTripEvent)
+
 	return r
 }
 
 // @BasePath /api/v1
 
 // getAvailableScooters godoc
-// @Summary returns available scooters
+// @Summary returns available scooters within given area
 // @Description returns available scooters within given radius sorted by nearest first
 // @Tags user-api
 // @Accept  json
@@ -207,5 +236,106 @@ func (api *apiDetails) beginTrip(c *gin.Context) {
 	}
 
 	c.IndentedJSON(http.StatusOK, resp)
+	c.Done()
+}
+
+// endTrip godoc
+// @Summary ends the trip
+// @Description ends the trip for given user with given scooter, scooter becomes available for other users once the trip ends
+// @Tags user-api
+// @Accept  json
+// @Produce  json
+// @Param endTripRequest body rest.endTripRequest true "end trip request"
+// @Param api_key query string true "api_key"
+// @Success 200 {object} rest.endTripResponse
+// @Failure 404 {object} rest.errorRespose
+// @Failure 400 {object} rest.errorRespose
+// @Failure 500 {object} rest.errorRespose
+// @Router /auth/user/end-trip [put]
+func (api *apiDetails) endTrip(c *gin.Context) {
+	req := &endTripRequest{}
+	err := c.BindJSON(req)
+	if err != nil {
+		createErrorResponse(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	err = validate.Struct(req)
+	if err != nil {
+		createErrorResponse(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	err = api.app.EndTrip(c, req.UserID, req.ScooterID)
+	if err != nil {
+		errStatusCode := getErrHTTPStatusCode(err)
+		createErrorResponse(c, errStatusCode, err.Error())
+		return
+	}
+
+	resp := endTripResponse{
+		UserID:    req.UserID,
+		ScooterID: req.ScooterID,
+	}
+
+	c.IndentedJSON(http.StatusOK, resp)
+	c.Done()
+}
+
+// saveScooterTripEvent godoc
+// @Summary saves the trip event generated by scooter
+// @Description saves the events generated by scooter when trip is started, ended and during the trip
+// @Tags scooter-api
+// @Accept  json
+// @Produce  json
+// @Param saveScooterTripEventRequest body rest.saveScooterTripEventRequest true "save trip event request"
+// @Param api_key query string true "api_key"
+// @Success 200 {object} rest.saveScooterTripEventResponse
+// @Failure 404 {object} rest.errorRespose
+// @Failure 400 {object} rest.errorRespose
+// @Failure 500 {object} rest.errorRespose
+// @Router /auth/scooter/trip-event [post]
+func (api *apiDetails) saveScooterTripEvent(c *gin.Context) {
+	req := &saveScooterTripEventRequest{}
+	err := c.BindJSON(req)
+	if err != nil {
+		createErrorResponse(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	err = validate.Struct(req)
+	if err != nil {
+		createErrorResponse(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	if !domain.IsValidTripEventType(req.Type) {
+		createErrorResponse(c, http.StatusBadRequest, "invalid event type")
+		return
+	}
+
+	tripEvent := &domain.TripEvent{
+		UserID:    req.UserID,
+		ScooterID: req.ScooterID,
+		Location: domain.GeoLocation{
+			Latitude:  req.Location.Latitude,
+			Longitude: req.Location.Longitude,
+		},
+		Type:      domain.TripEventType(req.Type),
+		CreatedAt: req.CreatedAt.UTC(),
+	}
+
+	err = api.app.SaveScooterTripEvent(c, tripEvent)
+	if err != nil {
+		errStatusCode := getErrHTTPStatusCode(err)
+		createErrorResponse(c, errStatusCode, err.Error())
+		return
+	}
+
+	resp := saveScooterTripEventResponse{
+		Success: true,
+	}
+
+	c.IndentedJSON(http.StatusCreated, resp)
 	c.Done()
 }
